AGC Badge Database Changes
---------------------------------------

Ver 169:
- Calender updates and minor fixes, Composer updates

Ver 166-168: 
- Small Patches: Guest CC Payment,...

Ver 162-165:
- Calendar Users and permissions! Calender Search Updates.

Ver 160-161:
- Calendar updates, Rules updates.

Ver 159: 2020-01-08
- Legislative Email system

Ver 158:
- Composer updates

Ver 156-157:
- Guests now pay 10 Bucks. Updated multiple guests

Ver 155:
- Certification payment update

Ver 154:
- Added Casheer, other small Fixes.

Ver 153:
- Email Fixes!  Check yer Mail!

Ver 151:
- Composer updates

Ver 150:
- Lookup Online Payments Only Works for Renewal.

Ver 145-149:
- Fixed Cedit Card Processing! ??!
- Paypal updates
- Patches

ver 144-143:
- Composer Updates,
- Adding a PayPal option.

ver 141:
- Credit card troubleshooting,
- Calendar updates,

Ver 137:
- More Structuder Calendar
- Composer Updates.

Ver 134-6:
- Inital Calendar Integration stuff
- added option to change default Page Count
- Fixed most php errors (new x)->

Ver 132:
- Updated RSO permissions on events
- Fixed Credit Cards on Sales Page

Ver 131:
- Composer Updates

Ver 129-130:
- Updates Mass Emails
- RSOs Now have access to preocess Credit Cards!
- Added check for duplicat emails on mew badge.
- Updated YOB field.

Ver 125-128:
- Added Guest violations to report, Updated events page
- Backend:Composer Updates.

Ver 124:
- Added Badge Status Probation, Updated Violations View.
- Fixed Closing Time of Events.
- Added CIO Badge.

Ver 123:
- Fixes: Auto Closing of Events, Post-Print Transaction Date Search.
- Admin's can now delete dupliace transactions, On Same Day.  (Will not affect Credit Cards)

Ver 122:
- RSO Updates for Events

Ver 120-121:
- Added Clock Time extension,
- Many Updates for CIO events
- Fixed issue with updating the 'Updated at' field for badge members.

Ver 119
-Enabled Photos for RSO's
-Updated Guest Stats page

Ver 118 (2019-02-13)