@@ -27,7 +27,7 @@ class AdminController extends \yii\web\Controller {
 		'CalSetup' => ['cal-setup/index','cal-setup/clubs','cal-setup/updateclu','cal-setup/facility','cal-setup/updatefac','cal-setup/rangestatus','cal-setup/updateran','cal-setup/eventstatus','cal-setup/updateeven'],
 		'Clubs' => ['clubs/index','clubs/create','clubs/delete','clubs/update','clubs/view','clubs/delete-X','clubs/badge-rosters'],
 		'MassEmail' => ['mass-email/create','mass-email/index','mass-email/update','mass-email/send','mass-email/process'],
-		'Events' => ['events/approve','events/index','events/close','events/create','events/delete','events/reg','events/return','events/remove-att','events/update','events/view','badges/get-badge-name'],
+		'Events' => ['events/approve','events/add-att','events/index','events/close','events/create','events/delete','events/reg','events/return','events/remove-att','events/update','events/view','badges/get-badge-name'],
 		'Fees Structure'=>['fee-structure/ajaxmoney-convert','fee-structure/index','fee-structure/create','fee-structure/update','fee-structure/delete-X','fee-structure/view','fee-structure/fees-by-type','badges/view-certificate','badges/view-certifications-list','badges/update-certificate','badges/delete-certificate'],
 		'Guest' => ['guest/all','guest/index','guest/view','guest/add','guest/addcredit','guest/create','guest/modify','guest/update','guest/stats','guest/out','guest/delete','guest/sticky-form'],
 		'Index' => ['site/index', 'site/error', 'site/logout','site/login','site/login-member','site/no-email','site/new-badge','site/verify'],
@@ -48,10 +48,10 @@ class AdminController extends \yii\web\Controller {
 		'Index' => ['site/index','site/error','site/logout','site/login','site/login-member','site/new-badge'],
 		'Admin' => ['badge/log-error','events/approve','badge/badge-print','badge/index','badge/users-index','badge/edit-user','badge/view-user','badge/create-user','badge/admin-function','badge/work-credit-entry','badge/brows-work-credits','badge/work-credit-menu','badge/club-name-look-up','badge/club-name-create','badge/club-name-edit','badge/work-credit-transfer','badge/create', 'badge/update', 'site/logout','site/login','site/new-badge'],
 		'Badges'=>['badges/all','badges/add-certification','badges/api-generate-renaval-fee','badges/api-check','badges/api-request-family','badges/barcode','badges/create','badges/generate-new-sticker','badges/get-badge-details','badges/get-family-badges','badges/index','badges/modify','badges/photo-add','badges/photo-crop','badges/post-print-transactions','badges/print','badges/print-rcpt','badges/renew-membership','badges/rename','badges/scan-badge','badges/test','badges/update','badges/update-renewal','badges/delete-renewal','badges/view','badges/view-renewal-history','badges/view-remarks-history','badges/view-subscriptions','badges/view-work-credits','badges/view-work-credits-log'],
-		'Calendar' =>['calendar/all','calendar/approve','calendar/close','calendar/create','calendar/conflict','calendar/delete','calendar/inactive','calendar/index','calendar/open-range','calendar/recur','calendar/republish','calendar/update','calendar/view'],
+		'Calendar' =>['calendar/all','calendar/approve','calendar/close','calendar/create','calendar/conflict','calendar/delete','calendar/inactive','calendar/index','calendar/open-range','calendar/recur','calendar/republish','calendar/update'],
 		'Fees Structure'=>['fee-structure/ajaxmoney-convert','fee-structure/index','fee-structure/create','fee-structure/update','fee-structure/delete-X','fee-structure/view','fee-structure/fees-by-type','badges/view-certificate','badges/view-certifications-list','badges/update-certificate','badges/delete-certificate'],
 		'Clubs' => ['clubs/index','clubs/create','clubs/update','clubs/view','clubs/badge-rosters'],
-		'Events' => ['events/approve','events/index','events/close','events/create','events/delete','events/reg','events/remove-att','events/update','events/view','badges/get-badge-name'],
+		'Events' => ['events/approve','events/add-att','events/index','events/close','events/create','events/delete','events/reg','events/remove-att','events/update','events/view','badges/get-badge-name'],
 		'Guest' => ['guest/all','guest/index','guest/view','guest/add','guest/addcredit','guest/create','guest/modify','guest/update','guest/out','guest/delete','guest/sticky-form'],
 		'Rules'=> ['rules/index','rules/create','rules/update','rules/view'],
 		'sales' => ['payment/charge','payment/refreshtoken','sales/index','sales/print-rcpt','sales/purchases','sales/all'],
@@ -122,8 +122,8 @@ class AdminController extends \yii\web\Controller {
 		'Index' => ['site/index','site/error','site/logout','site/login','site/login-member','site/new-badge'],
 		'Admin'=>['badge/log-error'],
 		'Badges'=>['badges/restrict','badges/api-check','badges/get-badge-details','badges/index','badges/update','badges/view','badges/view-certificate','badges/view-certifications-list','badges/view-renewal-history','badges/view-remarks-history','badges/view-subscriptions','badges/view-work-credits','badges/view-work-credits-log'],
-		'Calendar' =>['calendar/create','calendar/index','calendar/conflict','calendar/inactive','calendar/open-range','calendar/update','calendar/view'],
-		'Events' => ['events/index','events/create','events/reg','events/view','badges/get-badge-name'],
+		'Calendar' =>['calendar/create','calendar/index','calendar/conflict','calendar/inactive','calendar/open-range','calendar/update'],
+		'Events' => ['events/index','events/add-att','events/create','events/reg','events/view','badges/get-badge-name'],
 		'Guest' => ['guest/index','guest/add','guest/addcredit','guest/view','guest/create','guest/update','guest/out','guest/sticky-form'],
 		'sales' => ['payment/charge','payment/refreshtoken','sales/index','sales/print-rcpt','sales/purchases','badges/api-request-family'],
 		'violations' => ['violations/index','violations/index','violations/view'],
@@ -142,7 +142,7 @@ class AdminController extends \yii\web\Controller {
 
 	public $calendarPermission = [
 		'Admin'=>['badge/log-error'],
-		'Calendar' =>['calendar/create','calendar/index','calendar/conflict','calendar/delete','calendar/inactive','calendar/index','calendar/open-range','calendar/recur','calendar/update','calendar/view'],
+		'Calendar' =>['calendar/create','calendar/index','calendar/conflict','calendar/delete','calendar/inactive','calendar/index','calendar/open-range','calendar/recur','calendar/update'],
 		'Badges'=>['badges/restrict','badges/api-check','badges/get-badge-details','badges/index','badges/update','badges/view','badges/view-certificate','badges/view-certifications-list','badges/view-renewal-history','badges/view-remarks-history','badges/view-subscriptions','badges/view-work-credits','badges/view-work-credits-log'],
 		'Index' => ['site/index','site/error','site/logout','site/login','site/login-member','site/new-badge'],
 		'Guest' => ['guest/index','guest/add','guest/addcredit','guest/view','guest/create','guest/update','guest/out','guest/sticky-form'],
@@ -150,6 +150,10 @@ class AdminController extends \yii\web\Controller {
 		'violations' => ['violations/index','violations/index','violations/view'],
 		'Work Credits'=>['work-credits/index','work-credits/sticky-form','work-credits/create','work-credits/credit-transfer','work-credits/transfer-confirm','work-credits/transfer-view','work-credits/view','work-credits/transfer-form'],
 	
+	];
+
+	public $chairmanPermission = [
+		'extras' => ['calendar/close'],
 	];
 
 	// Used for Importing CVS data
@@ -212,7 +216,6 @@ class AdminController extends \yii\web\Controller {
 				case "9": $TestPriv = $this->calendarPermission;	break;
 				case "10": $TestPriv = $this->cashierPermission;	break;
 			}
-			
 
 			foreach ($TestPriv as $permission) {
 				if(in_array($event,$permission)) {
@@ -220,7 +223,6 @@ class AdminController extends \yii\web\Controller {
 					return true;
 				}
 			}
-			//yii::$app->controller->createAccessLog(true, 'Access_test', $event." -");
 			return false;
 		}
 	} //.has permission ending
@@ -337,7 +339,8 @@ class AdminController extends \yii\web\Controller {
 	}
 
 	public function createLog($isEnabled, $username, $activity, $name='activity') {
-		if(($isEnabled) || (!strpos($_SERVER['DOCUMENT_ROOT'],'badgeApp'))) {
+		$param = Params::find()->one();
+		if(($isEnabled) || ($param->qb_env=='dev')) {
 			$root = Yii::getAlias('@webroot/'.$name.'_logs.txt');
 			$fp = fopen($root, 'a');
 			fwrite($fp, "['".yii::$app->controller->getNowTime()."','".$username."','".$activity."']\r\n");
@@ -345,18 +348,24 @@ class AdminController extends \yii\web\Controller {
 		}
 	}
 
-	public function createCalLog($time, $username, $activity) {
-		$root = Yii::getAlias('@webroot/calendar_logs.txt');
-		$fp = fopen($root, 'a');
-		fwrite($fp, "['".yii::$app->controller->getNowTime()."','".$username."','".$activity."']\r\n");
-		fclose($fp);
+	public function createCalLog($isEnabled, $username, $activity) {
+		$param = Params::find()->one();
+		if(($isEnabled) || ($param->qb_env=='dev')) {
+			$root = Yii::getAlias('@webroot/calendar_logs.txt');
+			$fp = fopen($root, 'a');
+			fwrite($fp, "['".yii::$app->controller->getNowTime()."','".$username."','".$activity."']\r\n");
+			fclose($fp);
+		}
 	}
 
-	public function createEmailLog($time, $username, $activity) {
-		$root = Yii::getAlias('@webroot/email_logs.txt');
-		$fp = fopen($root, 'a');
-		fwrite($fp, "['".yii::$app->controller->getNowTime()."','".$username."','".$activity."']\r\n");
-		fclose($fp);
+	public function createEmailLog($isEnabled, $username, $activity) {
+		$param = Params::find()->one();
+		if(($isEnabled) || ($param->qb_env=='dev')) {
+			$root = Yii::getAlias('@webroot/email_logs.txt');
+			$fp = fopen($root, 'a');
+			fwrite($fp, "['".yii::$app->controller->getNowTime()."','".$username."','".$activity."']\r\n");
+			fclose($fp);
+		}
 	}
 
 	public function createJavaLog($PageLoc, $activity, $username) {
